# pyicu-slugify

./: setup.cfg
.github/workflows/: python-package.yaml
src/pyicu_slugify.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_slugify.py
