[metadata]
name = pyicu-slugify
description = A CLDR-compliant slugify function using PyICU
long_description = file: README.md
long_description_content_type = text/markdown
author = Miguel Pachas García
author_email = miguel.pachas.garcia@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    PyICU>=2.8

[options.packages.find]
where = src